--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,8 +3,10 @@
           package="tk.sivamahadevan.VoigtKampff"
           android:versionCode="1"
           android:versionName="1.0">
-    <uses-sdk android:minSdkVersion="19"/>
-    <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
+    <uses-sdk android:minSdkVersion="8"
+        android:maxSdkVersion="19"/>
+    <application android:label="@string/app_name" android:icon="@drawable/ic_launcher"
+        android:debuggable="true">
         <activity android:name=".MainActivity"
                   android:label="@string/app_name">
             <intent-filter>
@@ -17,5 +19,11 @@
             android:label="Test Calibration">
         </activity>
         <activity android:name=".TestActivity"/>
+        <activity
+            android:name=".ResultsActivity"
+            android:label="Final Results"/>
+        <activity
+            android:name=".HelpView"
+            android:label="Help/Instructions"/>
     </application>
 </manifest>
